draft_copy1_completed

--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -497,6 +497,146 @@
             // connectTo: "38",
             // connectorType: "finish-start",
           },
+          // Deliverables
+          {
+            id: "42",
+            name: "Course Deliverables",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 1),
+            actualEnd: Date.UTC(2020, 11, 15),
+            // connectTo: "38",
+            // connectorType: "finish-start",
+          },
+          {
+            id: "43",
+            name: "Draft Project Proposal",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 7),
+            actualEnd: Date.UTC(2020, 8, 13),
+            connectTo: "44",
+            connectorType: "finish-start",
+          },
+          {
+            id: "44",
+            name: "Revised Project Proposal",
+            parent: "43",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 13),
+            actualEnd: Date.UTC(2020, 8, 20),
+            connectTo: "45",
+            connectorType: "finish-start",
+          },
+          {
+            id: "45",
+            name: "Project Report #1",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 20),
+            actualEnd: Date.UTC(2020, 9, 4),
+            // connectTo: "46",
+            // connectorType: "start-start",
+          },
+          {
+            id: "46",
+            name: "SCRUM & SPRINT #1",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 20),
+            actualEnd: Date.UTC(2020, 9, 4),
+            connectTo: "47",
+            connectorType: "finish-start",
+          },
+          {
+            id: "47",
+            name: "SCRUM & SPRINT #2",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 4),
+            actualEnd: Date.UTC(2020, 9, 18),
+            connectTo: "51",
+            connectorType: "finish-start",
+          },
+          {
+            id: "48",
+            name: "Midterm",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 1),
+            actualEnd: Date.UTC(2020, 9, 29),
+            // connectTo: "45",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "49",
+            name: "Midterm Project Demonstration",
+            parent: "48",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 5),
+            actualEnd: Date.UTC(2020, 9, 22),
+            // connectTo: "45",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "50",
+            name: "Midterm Project Report",
+            parent: "48",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 18),
+            actualEnd: Date.UTC(2020, 10, 29),
+            // connectTo: "45",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "51",
+            name: "SCRUM & SPRINT #3",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 4),
+            actualEnd: Date.UTC(2020, 10, 15),
+            connectTo: "52",
+            connectorType: "finish-start",
+          },
+          {
+            id: "52",
+            name: "SCRUM & SPRINT #4 (Final)",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 10, 15),
+            actualEnd: Date.UTC(2020, 10, 29),
+            // connectTo: "45",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "53",
+            name: "Final",
+            parent: "42",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 8, 1),
+            actualEnd: Date.UTC(2020, 11, 15),
+            // connectTo: "45",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "54",
+            name: "Final Project Demonstration",
+            parent: "53",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 9, 22),
+            actualEnd: Date.UTC(2020, 11, 3),
+            // connectTo: "45",
+            // connectorType: "finish-finish",
+          },
+          {
+            id: "55",
+            name: "Final Project Report",
+            parent: "53",
+            progressValue: "100%",
+            actualStart: Date.UTC(2020, 10, 29),
+            actualEnd: Date.UTC(2020, 11, 15),
+            // connectTo: "45",
+            // connectorType: "finish-finish",
+          },
           {
             id: "100",
           },
