timeline issues fixed

--- a/CEG4912-gantt-chart/index.html
+++ b/CEG4912-gantt-chart/index.html
@@ -297,8 +297,8 @@
             progressValue: "100%",
             actualStart: Date.UTC(2020, 8, 8),
             actualEnd: Date.UTC(2020, 8, 25),
-            // connectTo: "22",
-            // connectorType: "finish-start",
+            connectTo: "24",
+            connectorType: "finish-start",
           },
           {
             id: "22",
@@ -346,7 +346,7 @@
             parent: "24",
             progressValue: "80%",
             actualStart: Date.UTC(2020, 8, 26),
-            actualEnd: Date.UTC(2020, 10, 20),
+            actualEnd: Date.UTC(2020, 10, 25),
             // connectTo: "22",
             // connectorType: "start-start",
           },
